Added AWS Connection String

--- a/RestaurantOrderSystem/appsettings.json
+++ b/RestaurantOrderSystem/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Username=postgres;Password=ram@qwe;Database=orleans_orders;Include Error Detail=true"
+    "PostgresConnection": "Host=restaurant-db.cluster-ro-clq2kmcuqz2t.eu-west-2.rds.amazonaws.com;Port=5432;Username=dbadmin;Password=Pass000001;Database=orleans_orders;Include Error Detail=true"
   },
   "Orleans": {
     "ClusterId": "dev-cluster",
